<resources>
    <string name="app_name">JustJava_ViewBinding</string>
    <string name="personName">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="counter">1</string>
    <string name="plus">+</string>
    <string name="order_summary">Order Summary</string>
    <string name="start_text">$ 0</string>
    <string name="order">ORDER</string>
    <string name="name_hint">Name</string>
</resources>